# ping-pong-robot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml  vcs-ros-o.yaml
config/: mecanum_drive_controller.yaml  ping-pong_servo_config.yaml
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
docs/presentation/: uml1.act
docs/report/: report.aux  report.out  report.tex
document/report/: report.aux  report.dvi  report.out  report.tex
launch/: 2d-detect.launch  all.launch  detect_ball.launch  diff_drive_controller.launch  display.launch  gazebo.launch  mecanum_drive_controller.launch  minimal.launch
logs/HARIMOTO/: build.cmake.000.log.stderr
logs/kxr_controller/: build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr
logs/kxreus/: build.cmake.000.log.stderr  build.make.000.log.stderr
logs/realsense2_camera/: build.make.000.log.stderr
logs/riberry_startup/: build.make.000.log.stderr
meshes/: hand.STL  lower_arm.STL  lower_arm.dae  upper_shoulder.dae
model/assembly/: arm.SLDASM  base.SLDASM
model/モデル/: arm.SLDASM  (+5 more)
ping-pong/: CMakeLists.txt
scripts/: ball_distance.l  hough_ball_position.l  mins_sqruare.py  scan_ids.py
src/: HARIMOTO-interface.l  HARIMOTO-speak.l  README.md  demo.l  falling-point-estimation  learn.l  main.l  ping-pong-interface.l  ping-pong-speak.l  prev-main.l  scan_ids
urdf/: HARIMOTO-rev.urdf  HARIMOTO.csv  HARIMOTO.l  ping-pong-rev.urdf  ping-pong.csv  ping-pong.l  ping-pong.urdf
(+530 files in other folders)
