<package format="2">
  <name>ping-pong</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for ping-pong</p>
    <p>This package contains configuration data, 3D models and launch files
for ping-pong robot</p>
  </description>
  <author>Michitoshi Tsubaki</author>
  <maintainer email="tsubaki@jsk.t.u-tokyo.ac.jp" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <depend>ridgeback_control</depend>
  <export>
    <architecture_independent />
  </export>
</package>
